--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>中华人民共和国文化和旅游部 - 企业信息</title>
+    <title></title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
