--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="company-section">
             <div class="company-header">
                 <div class="blue-bar"></div>
-                <h2>苏州二五二儿童娱乐有限公司</h2>
+                <h2>重庆八厘米农业科技有限公司</h2>
             </div>
             
             <div class="info-grid">
@@ -34,7 +34,7 @@
                         <span class="value">1301560136874</span>
                     </div>
                     <div class="info-item right-col">
-                        <span class="value">苏州二五二儿童娱乐有限公司</span>
+                        <span class="value">重庆八厘米农业科技有限公司</span>
                     </div>
                 </div>
 
@@ -48,15 +48,15 @@
                 <div class="info-row">
                     <div class="info-item address-col">
                         <div class="address-content">
-                            <div>苏州市吴中区木渎镇花苑路8幢6号</div>
-                            <div></div>
+                            <div>重庆市巴南区一品街道沿河</div>
+                            <div>街33号附9号自编号ZZ00058</div>
                             <div></div>
                         </div>
                     </div>
                     <div class="info-item legal-rep-col">
                         <div class="legal-rep-content">
                             <div class="label">法定代表人</div>
-                            <div class="value">史正芳</div>
+                            <div class="value">万思彤</div>
                         </div>
                     </div>
                 </div>
@@ -73,10 +73,10 @@
 
                 <div class="info-row">
                     <div class="info-item left-col">
-                        <span class="value">有限责任公司(自然人投资或控股)</span>
+                        <span class="value">内资歌舞娱乐场所</span>
                     </div>
                     <div class="info-item right-col">
-                        <span class="value">内资娱乐场所</span>
+                        <span class="value">有限责任公司(自然人独资)</span>
                     </div>
                 </div>
 
@@ -92,7 +92,7 @@
 
                 <div class="info-row">
                     <div class="info-item left-col">
-                        <span class="value">50万人民币</span>
+                        <span class="value">10万人民币</span>
                     </div>
                     <div class="info-item right-col">
                         <span class="value">2025-06-20</span>
@@ -111,10 +111,10 @@
 
                 <div class="info-row">
                     <div class="info-item left-col">
-                        <span class="value">3500</span>
+                        <span class="value">493平方米</span>
                     </div>
                     <div class="info-item right-col">
-                        <span class="value">7</span>
+                        <span class="value">30</span>
                     </div>
                 </div>
 
@@ -130,7 +130,7 @@
 
                 <div class="info-row">
                     <div class="info-item left-col">
-                        <span class="value">29</span>
+                        <span class="value">59</span>
                     </div>
                     <div class="info-item right-col">
                         <span class="value">歌舞娱乐场所</span>
@@ -152,7 +152,7 @@
                         <span class="value">2025-06-20至2026-06-19</span>
                     </div>
                     <div class="info-item right-col">
-                        <span class="value">苏州市吴中区文化和旅游局</span>
+                        <span class="value">重庆市巴南区文化和旅游局</span>
                     </div>
                 </div>
 
