--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>文化许可证查询</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -31,7 +31,7 @@
 
                 <div class="info-row">
                     <div class="info-item left-col">
-                        <span class="value">1301560136874</span>
+                        <span class="value">320929860028</span>
                     </div>
                     <div class="info-item right-col">
                         <span class="value">重庆八厘米农业科技有限公司</span>
@@ -73,10 +73,10 @@
 
                 <div class="info-row">
                     <div class="info-item left-col">
-                        <span class="value">内资歌舞娱乐场所</span>
+                        <span class="value">有限责任公司(自然人独资)</span>
                     </div>
                     <div class="info-item right-col">
-                        <span class="value">有限责任公司(自然人独资)</span>
+                        <span class="value">内资游艺娱乐场所</span>
                     </div>
                 </div>
 
@@ -92,7 +92,7 @@
 
                 <div class="info-row">
                     <div class="info-item left-col">
-                        <span class="value">10万人民币</span>
+                        <span class="value">人民币10万</span>
                     </div>
                     <div class="info-item right-col">
                         <span class="value">2025-06-20</span>
@@ -133,7 +133,7 @@
                         <span class="value">59</span>
                     </div>
                     <div class="info-item right-col">
-                        <span class="value">歌舞娱乐场所</span>
+                        <span class="value">游艺娱乐场所</span>
                     </div>
                 </div>
 
@@ -152,7 +152,7 @@
                         <span class="value">2025-06-20至2026-06-19</span>
                     </div>
                     <div class="info-item right-col">
-                        <span class="value">重庆市巴南区文化和旅游局</span>
+                        <span class="value">重庆市巴南区文化广电和旅游局</span>
                     </div>
                 </div>
 
