--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>文化许可证查询</title>
+    <title></title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -152,7 +152,7 @@
                         <span class="value">2025-06-20至2026-06-19</span>
                     </div>
                     <div class="info-item right-col">
-                        <span class="value">苏州市吴中区文化广电和旅游局</span>
+                        <span class="value">苏州市吴中区旅游体育局</span>
                     </div>
                 </div>
 
