--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <span class="value">2025-06-20至2026-06-19</span>
                     </div>
                     <div class="info-item right-col">
-                        <span class="value">苏州市吴中区旅游体育局</span>
+                        <span class="value">苏州市吴中区文化和旅游发展委员会</span>
                     </div>
                 </div>
 
